package net.civeira.phylax.features.access.userconsentedscopes.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.userconsentedscopes.domain.event.UserConsentedScopesCreateEvent;
import net.civeira.phylax.features.access.userconsentedscopes.domain.event.UserConsentedScopesDeleteEvent;
import net.civeira.phylax.features.access.userconsentedscopes.domain.event.UserConsentedScopesEvent;
import net.civeira.phylax.features.access.userconsentedscopes.domain.event.UserConsentedScopesUpdateEvent;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.DecisionAtVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.GrantedVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.IpAddressVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.ScopeVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.TrustedClientVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.UserAgentVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.UserVO;
import net.civeira.phylax.features.access.userconsentedscopes.domain.valueobject.VersionVO;

/**
 * user-consented-scopes
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class UserConsentedScopes implements UserConsentedScopesRef {

  /**
   * Prepare a new user consented scopes with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new user consented scopes
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed user consented scopes.
   */
  public static UserConsentedScopes create(final UserConsentedScopesChangeSet change)
      throws ConstraintException {
    UserConsentedScopes instance = new UserConsentedScopes(change, Optional.empty());
    instance.addEvent(UserConsentedScopesCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El decision at de user consented scopes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private DecisionAtVO decisionAtValue = DecisionAtVO.nullValue();

  /**
   * El granted de user consented scopes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private GrantedVO grantedValue = GrantedVO.nullValue();

  /**
   * El ip address de user consented scopes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private IpAddressVO ipAddressValue = IpAddressVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<UserConsentedScopesEvent> recordedEvents = List.of();

  /**
   * El scope de user consented scopes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private ScopeVO scopeValue = ScopeVO.nullValue();

  /**
   * El trusted client de user consented scopes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TrustedClientVO trustedClientValue;

  /**
   * A number to identify the db record
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El user agent de user consented scopes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private UserAgentVO userAgentValue = UserAgentVO.nullValue();

  /**
   * El user de user consented scopes
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UserVO userValue;

  /**
   * Campo con el número de version de user consented scopes para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private UserConsentedScopes(final UserConsentedScopesChangeSet attribute,
      final Optional<UserConsentedScopes> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.userValue = attribute.readUser(previous, list);
    this.trustedClientValue = attribute.readTrustedClient(previous, list);
    this.scopeValue = attribute.readScope(previous, list);
    this.grantedValue = attribute.readGranted(previous, list);
    this.decisionAtValue = attribute.readDecisionAt(previous, list);
    this.ipAddressValue = attribute.readIpAddress(previous, list);
    this.userAgentValue = attribute.readUserAgent(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on UserConsentedScopes", list);
    }
    this.recordedEvents = previous.map(UserConsentedScopes::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a user consented scopes
   *
   * @autogenerated EntityGenerator
   * @return A instance of user consented scopes ready to be deleted
   */
  public UserConsentedScopes delete() {
    UserConsentedScopes instance =
        new UserConsentedScopes(new UserConsentedScopesChangeSet(), Optional.of(this));
    instance.addEvent(UserConsentedScopesDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(9);
    uidToMap(map);
    userToMap(map);
    trustedClientToMap(map);
    scopeToMap(map);
    grantedToMap(map);
    decisionAtToMap(map);
    ipAddressToMap(map);
    userAgentToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a user consented scopes
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of user consented scopes
   */
  public UserConsentedScopes update(final UserConsentedScopesChangeSet change)
      throws ConstraintException {
    UserConsentedScopes instance = new UserConsentedScopes(change, Optional.of(this));
    instance.addEvent(UserConsentedScopesUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public UserConsentedScopes withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final UserConsentedScopesEvent event) {
    List<UserConsentedScopesEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
