' @autogenerated
@startuml
left to right direction
title Clases para user consented scopes
class access.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}
class access.TrustedClient{
uid:string
code:string
allowAllScopes:boolean
publicAllow:boolean
secretOauth:string
backChannelLogoutUri:string
backChannelLogoutSessionRequired:boolean
frontChannelLogoutUri:string
frontChannelLogoutSessionRequired:boolean
enabled:boolean
registrationAccess:string
clientName:string
logoUri:string
clientUri:string
policyUri:string
tosUri:string
tokenEndpointAuthMethod:string
grantTypesJson:blob
responseTypesJson:blob
dynamicallyRegistered:boolean
registeredAt:datetime
allowedScopesM2m:blob
m2mTokenTtlSeconds:integer
requestObjectSigningAlg:string
jwksUri:blob
jwksJson:blob
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.UserConsentedScopes{
uid:string
scope:string
granted:boolean
decisionAt:datetime
ipAddress:string
userAgent:string
version:integer
list()
retrieve()
create()
update()
delete()
}
access.User "1"  o--  "N*" access.UserConsentedScopes: user
access.TrustedClient "1"  o--  "N*" access.UserConsentedScopes: trustedClient

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
